<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/common_spacing"
    tools:context=".ui.LoginFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singleline_edit_text_height"
        android:layout_margin="@dimen/small_spacing"
        android:hint="@string/enter_login"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/singleline_edit_text_height"
        android:layout_margin="@dimen/small_spacing"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>
