<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NewJobFragment">
    <EditText
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="start"
        android:layout_margin="@dimen/common_spacing"
        android:autofillHints="@string/company_name"
        android:hint="@string/company_name"
        android:inputType="textMultiLine"
        android:linksClickable="true"
        android:paddingStart="@dimen/small_spacing"
        android:paddingEnd="@dimen/small_spacing" />

    <EditText
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="start"
       android:layout_margin="@dimen/common_spacing"
        android:autofillHints="@string/position"
        android:hint="@string/position"
        android:inputType="textMultiLine"
        android:linksClickable="true"
        android:paddingStart="@dimen/small_spacing"
        android:paddingEnd="@dimen/small_spacing" />

    <EditText
        android:id="@+id/add_start_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avatar_size"
        android:layout_margin="@dimen/common_spacing"
        android:autofillHints="@string/start_date"
        android:focusable="false"
        android:hint="@string/start_date"
        android:inputType="none"
        android:padding="@dimen/small_spacing"
        android:textSize="18sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/add_end_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avatar_size"
        android:layout_margin="@dimen/common_spacing"
        android:autofillHints="@string/end_date"
        android:focusable="false"
        android:hint="@string/end_date"
        android:inputType="none"
        android:padding="@dimen/small_spacing"
        android:textSize="18sp"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_spacing"
        android:orientation="horizontal"
        android:paddingStart="@dimen/small_spacing"
        android:paddingEnd="@dimen/small_spacing">

        <EditText
            android:id="@+id/link"
            android:layout_width="0dp"
            android:layout_height="@dimen/avatar_size"
            android:hint="@string/enter_link"
            android:inputType="textPostalAddress"
            android:paddingStart="@dimen/small_spacing"
            android:layout_weight="2"
            android:paddingEnd="@dimen/small_spacing"
            android:importantForAutofill="no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_link_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/avatar_size"
            android:layout_gravity="bottom"
            android:background="@color/accent"
            android:textColor="@color/white"
            app:icon="@drawable/link_ic"
            app:iconTint="@color/white"
            android:layout_weight="1"
            tools:ignore="RelativeOverlap,RtlSymmetry" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/small_spacing"
        android:clickable="true"
        android:contentDescription="@string/add_post"
        android:focusable="true"
        app:srcCompat="@drawable/ok_ic" />

</LinearLayout>