<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_spacing"
    android:orientation="vertical"
    tools:context=".ui.RegistrationFragment">
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/singleline_edit_text_height"
            android:layout_marginBottom="@dimen/small_spacing"
            android:hint="@string/enter_user_name"
            android:inputType="text"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/singleline_edit_text_height"
            android:layout_marginBottom="@dimen/small_spacing"
            android:singleLine="true"
            android:hint="@string/enter_login"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/singleline_edit_text_height"
            android:layout_marginBottom="@dimen/small_spacing"
            android:singleLine="true"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/singleline_edit_text_height"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/small_spacing"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <androidx.cardview.widget.CardView
            android:id="@+id/avatar_container"
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:alpha="0.5"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="250dp">


        <ImageView
            android:id="@+id/set_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/avatar_placeholder"
            tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/add_avatar"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:text="@string/add_avatar">-->
<!---->
<!--        </com.google.android.material.button.MaterialButton>-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_acc" />
</LinearLayout>