<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_spacing"
    app:cardCornerRadius="@dimen/medium_card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_margin="@dimen/common_spacing"
        android:padding="@dimen/common_spacing">

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:ellipsize="end"
            android:gravity="end"
            android:textAllCaps="true"
            android:textSize="@dimen/card_header_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/company_name" />

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_name"
            tools:text="@string/position" />

        <TextView
            android:id="@+id/work_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/start_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/position" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/work_from"
            app:layout_constraintTop_toBottomOf="@id/position"
            tools:text="@string/sample_published_date" />

        <TextView
            android:id="@+id/work_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:text="@string/end_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/work_from" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/work_to"
            app:layout_constraintTop_toBottomOf="@id/start_date"
            tools:text="@string/sample_published_date" />

        <TextView
            android:id="@+id/link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:autoLink="web"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/end_date"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="@string/link_description" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            style="@style/Widget.AppTheme.IconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/remove"
            android:layout_margin="@dimen/common_spacing"
            app:icon="@drawable/delete_ic"
            app:layout_constraintTop_toBottomOf="@id/link"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_job"
            style="@style/Widget.AppTheme.IconStyle"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/common_spacing"
            android:layout_height="wrap_content"
            android:contentDescription="@string/remove"
            app:layout_constraintTop_toBottomOf="@id/link"
            app:icon="@drawable/baseline_edit_24edit_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>