<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/elevation"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:title="@string/posts">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/login"
                android:textColor="@color/primary_text"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/common_spacing"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/sing_up"
                android:textColor="@color/primary_text"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/common_spacing"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_container"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_host"
            tools:layout="@layout/feed_posts" />
    </LinearLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:layout_gravity="bottom"
        app:hideOnScroll="true">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_nav_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:id="@+id/fab_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.Overlay
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:overlay_orientation="portrait" />

        <com.nambimobile.widgets.efab.ExpandableFab
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/small_spacing"
            android:layout_marginBottom="@dimen/small_spacing"
            app:efab_orientation="portrait" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/fab_add_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFabAddPost"
            app:fab_orientation="portrait"
            app:label_text="@string/add_post"
            tools:ignore="OnClick" />

        <com.nambimobile.widgets.efab.FabOption
            android:id="@+id/fab_add_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFabAddEvent"
            app:fab_orientation="portrait"
            app:label_text="@string/add_event"
            tools:ignore="OnClick" />

    </com.nambimobile.widgets.efab.ExpandableFabLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>